# eos-movrec

./: .gitignore  .travis.yml  CMakeLists.txt  ED-SDK_License.txt  FocuserClass.h  INSTALL  Info.plist  TODO  about.cpp  about.h  afthread.cpp  afthread.h  autofocus.cpp  autofocus.h  blinklabel.cpp  blinklabel.h  buffer.cpp  buffer.h  cam_tables.c  cam_tables.h  capturewnd.cpp  capturewnd.h  command.cpp  command.h  config.h.cmake  eos_movrec.pro  eos_movrec.rc  events.h  freqtimer.c  freqtimer.h  histogramwnd.cpp  histogramwnd.h  livethread.cpp  livethread.h  main.cpp  mainwnd.cpp  mainwnd.h  mjpegwrt.c  mjpegwrt.h  optionsdlg.cpp  (+5 more)
eos_movrec.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
mac.icons/: eos-movrec.mac.icns
mac.inst/: 512.src.tiff  background.src.tif  dmg.icon.icns  eos_movrec.dmg
pixmaps/: record.xpm  stop.xpm  usb-sign-black.xpm
tools/: enc_x264.sh
